resizable chart + buttons no longer go off screen

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-common {
-  background-color: #141414;
+  background-color: #0e0d0d;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -22,9 +22,8 @@
   color: rgb(212, 204, 204);
 }
 
-.App-header {
+.App-body {
   min-height: 95vh;
-  font-size: calc(10px + 2vmin);
 }
 
 .App-footer {
